--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel='stylesheet' type='text/css' href='global.css'/>
+<link rel='stylesheet' type='text/css' href='css/global.css'/>
 </head>
 	<body>
 		<div class='container'>
@@ -15,6 +15,6 @@
 					Use WASD or the arrow keys to move
 				</p>
 			</div>
-		<script src='game.js'></script>
+		<script src='js/game.js'></script>
 	</body>
 </html>
