made follower collision and discription change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 					<p id='end_message' class='end_message'></p>
 				</div>
 				<p class='instructions'>
-					Get your desciple to the green square without touching it. Be cunning . . .<br/><br/>
+					Get your follower to the green square without touching it. Be cunning . . .<br/><br/>
 					Use WASD or the arrow keys to move
 				</p>
 			</div>
