now itterates through levels, does not stop at last level

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 				<div class='overlay' id='overlay' width='640' height='480'>
 					<p id='end_message' class='end_message'></p>
+					<p id='next_level' class='next_level'>Next Level</p>
 				</div>
 				<p class='instructions'>
 					Get your follower to the green square without touching it. Be cunning . . .<br/><br/>
 					Use WASD or the arrow keys to move
 				</p>
 			</div>
+		<script src='js/levels.js'></script>
 		<script src='js/game.js'></script>
 	</body>
 </html>
